Remove volatile in builders